# nax

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
nax_cli/: README.md  __init__.py  __main__.py  installer.py
plugins/disciplined-entrepreneurship/: README.md
plugins/disciplined-entrepreneurship/.claude-plugin/: plugin.json
plugins/disciplined-entrepreneurship/agents/: assumption-red-teamer.md  business-model-architect.md  competitor-analyst.md  customer-discovery-analyst.md  market-researcher.md  pitch-deck-architect.md  tam-estimator.md
plugins/disciplined-entrepreneurship/commands/: business-model.md  competition.md  de-analyze.md  de-charter.md  de-clarify.md  de-implement.md  de-next.md  de-plan.md  de-specify.md  de-step.md  de-tasks.md  gtm.md  market-research.md  personas.md  pitch-deck.md  red-team.md  size-market.md  unit-economics.md  validate-idea.md  venture-status.md
plugins/disciplined-entrepreneurship/scripts/: new_venture.sh  status.py  tam.py  unit_economics.py
plugins/disciplined-entrepreneurship/skills/competitive-analysis/: SKILL.md
plugins/disciplined-entrepreneurship/skills/disciplined-entrepreneurship/: SKILL.md
plugins/disciplined-entrepreneurship/skills/go-to-market/: SKILL.md
plugins/disciplined-entrepreneurship/skills/market-research/: SKILL.md
plugins/disciplined-entrepreneurship/skills/pitch-deck/: SKILL.md
plugins/disciplined-entrepreneurship/templates/venture/: 00-summary.md  01-who-is-your-customer.md  02-what-can-you-do.md  03-how-they-acquire.md  (+10 more)
(+19 files in other folders)
